# my-game

./: .gitignore  README.md  docker-compose.yml  my-game-logic.drawio  run-tests.bash
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/app/: main.py
services/api/app/api/: __init__.py
services/api/app/api/v1/: __init__.py
services/api/app/orm/: game.py
services/api/app/settings/: config.py  handlers.py  middlewares.py
services/api/app/utils/: game.py
services/bot/: Dockerfile  pyproject.toml  requirements.txt
services/bot/app/: main.py  rabbit.py
services/bot/app/base/: base_accessor.py
services/bot/app/settings/: config.py
services/bot/app/store/: __init__.py
services/bot/app/store/botq/: accessor.py
services/bot/app/store/telegram_api/: accessor.py
services/handler/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/handler/alembic/: env.py
services/handler/alembic/versions/: 3019b009a292_added_initial_tables.py  b537d67e4227_added_initial_tables.py
services/handler/app/: asyncpool.py  authed_client.py  bot.py  keyboard.py  main.py  message_helper.py
services/handler/app/base/: base_accessor.py
services/handler/app/handlers/: bad_message.py
services/handler/app/integration/: api.py
services/handler/app/orm/: game_state.py  player.py  question_session.py  session.py
services/handler/app/schemas/: message.py
services/handler/app/settings/: config.py
services/handler/app/store/: __init__.py
services/handler/app/utils/: delete.py  end_message.py  player.py  session.py
(+61 files in other folders)
