[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["copper-boy <sermed512@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.2"}
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
