[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["copper-boy <sermed512@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aio-pika = "^8.2.4"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
